@@ -1,3 +1,9 @@
+2010-03-05  Karl Berry  <karl@gnu.org>
+
+	* tex4ht-fonts-noncjk.tex: start at license notices.
+	Correct quoting of the
+	\Needs{"xhlatex tex4ht-fonts-4hf ..."} line.
+
 2010-03-04  Radhakrishnan CV  <cvr@river-valley.org>
 
 	* tex4ht-mkht.tex (<MYcopyrightnotice): new macro; insert
